# PQC-Testbed

./: .gitignore  readme.txt  status.txt
CROSS/Additional_Implementations/Benchmarking/: CMakeLists.txt
CROSS/Additional_Implementations/Benchmarking/lib/: Benchmarkingcode.c
FAEST/Reference_Implementation/faest_128f/: Makefile
LESS/Optimized_Implementation/avx2/: Benchmarkingcode.c  CMakeLists.txt
LESS/Utilities/MemoryBenchmarking/: Makefile
MAYO/Optimized_Implementation/: Makefile
MAYO/Optimized_Implementation/apps/: Benchmarkingcode.c  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
MAYO/Optimized_Implementation/src/: Makefile
MAYO/Optimized_Implementation/test/: Makefile
QRUOV/Benchtest/: benchtest.c  makefile  test
SDitH-v2/: README.txt
SDitH-v2/Optimized_Implementation/sdith_cat1_fast/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  bench_sdith  cmake_install.cmake
SDitH-v2/Optimized_Implementation/sdith_cat1_fast/generator/: Benchmarkingcode.c  CMakeLists.txt  CTestTestfile.cmake  Makefile  PQCGenKat_sign  api.h  cmake_install.cmake
SDitH-v2/Optimized_Implementation/sdith_cat1_fast/test/: SDITH_CAT1_FAST_bench.c  makefile
SDitH-v2/Optimized_Implementation/sdith_cat1_short/: CMakeLists.txt
SDitH-v2/Optimized_Implementation/sdith_cat1_short/generator/: Benchmarkingcode.c
SDitH-v2/Optimized_Implementation/sdith_cat3_fast/: CMakeLists.txt
SDitH-v2/Optimized_Implementation/sdith_cat3_short/: CMakeLists.txt
SDitH-v2/Optimized_Implementation/sdith_cat3_short/generator/: api.h
SDitH-v2/Optimized_Implementation/sdith_cat5_fast/: CMakeLists.txt
SDitH-v2/Optimized_Implementation/sdith_cat5_fast/generator/: Benchmarkingcode.c  CMakeLists.txt
SDitH-v2/Optimized_Implementation/sdith_cat5_short/: CMakeLists.txt  README.md
SDitH-v2/Optimized_Implementation/sdith_cat5_short/generator/: CTestTestfile.cmake  Makefile  PQCgenKAT_sign.c  cmake_install.cmake
SDitH-v2/Reference_Implementation/sdith_cat1_fast/: CMakeLists.txt
SDitH-v2/Reference_Implementation/sdith_cat1_short/: CMakeLists.txt
SDitH-v2/Reference_Implementation/sdith_cat1_short/generator/: api.h
SDitH-v2/Reference_Implementation/sdith_cat3_fast/: CMakeLists.txt
SDitH-v2/Reference_Implementation/sdith_cat3_fast/generator/: api.h  sign.c
SDitH-v2/Reference_Implementation/sdith_cat3_fast/test/: bench_sdith.c
SDitH-v2/Reference_Implementation/sdith_cat3_short/: CMakeLists.txt
SDitH-v2/Reference_Implementation/sdith_cat5_fast/: CMakeLists.txt
SDitH-v2/Reference_Implementation/sdith_cat5_fast/generator/: api.h
SDitH-v2/Reference_Implementation/sdith_cat5_short/: CMakeLists.txt
SDitH-v2/Reference_Implementation/sdith_cat5_short/generator/: api.h  rng.h
SDitH-v2/Reference_Implementation/sdith_cat5_short/lib/aes/: CMakeLists.txt
SDitH/Optimized_Implementation/Hypercube_Variant/sdith_hypercube_cat1_gf256/: bench  sign
SNOVA/src/: makefile
SNOVA/src/test/: test_api.c
SPHINCS+/Optimized_Implementation/crypto_sign/sphincs-haraka-128f-robust/: Makefile
SQIsign/apps/: CMakeCache.txt  CMakeLists.txt  Makefile  benchmark.c  cmake_install.cmake  example_nistapi.c
Testing Code/: Benchmarkingcode.c  PERKmake  RYDEmake  TestControl.c  Testing_Script.sh
TestingCode/: AcceptedBenchmarking.c  Automatic_Testing.sh  Benchmarkingcode.c  BenchmarkingcodeFAEST.c  BenchmarkingcodeHAWK.c  BenchmarkingcodeMAYO.c  BenchmarkingcodeMQOMvar.c  BenchmarkingcodeSNOVA.c  BenchmarkingcodeVariant.c  Dilithium2AESRmake  Dilithium2AESmake  Dilithium2Rmake  Dilithium2make  Dilithium3AESRmake  Dilithium3AESmake  Dilithium3Rmake  Dilithium3make  Dilithium5AESRmake  Dilithium5AESmake  Dilithium5Rmake  Dilithium5make  FAEST128fmake  FAEST128smake  FAEST192fmake  FAEST192smake  FAEST256fmake  FAEST256smake  FAESTem128fmake  FAESTem128smake  FAESTem192fmake  FAESTem192smake  FAESTem256fmake  FAESTem256smake  Falcon1024AVX2make  Falcon512AVX2make  FinishedScript.sh  HAWK1024make  HAWK512make  MIRATH1AF  MIRATH1AS  (+158 more)
TestingCode/Data/: Hawk-512
dilithium/Reference_Implementation/crypto_sign/dilithium3-AES/: config.h
mirath/Reference_Implementation/mirath_tcith/mirath_tcith_1a_fast/: main.c  mirath_tcith.c
mirath/Reference_Implementation/mirath_tcith/mirath_tcith_1a_short/: main.c  mirath_tcith.c
mirath/Reference_Implementation/mirath_tcith/mirath_tcith_1b_fast/: main.c
mirath/Reference_Implementation/mirath_tcith/mirath_tcith_3a_fast/: PQCgenKAT_sign.c  main.c  rng.c
mirath/Reference_Implementation/mirath_tcith/mirath_tcith_3b_fast/: main.c  mirath_tcith.c
mirath/Reference_Implementation/mirath_tcith/mirath_tcith_3b_short/: mirath_tcith.c
mirath/Reference_Implementation/mirath_tcith/mirath_tcith_5a_fast/: mirath_tcith.c
mirath/Reference_Implementation/mirath_tcith/mirath_tcith_5a_short/: main.c  mirath_tcith.c
mirath/Reference_Implementation/mirath_tcith/mirath_tcith_5b_fast/: main.c  mirath_keygen.c
ryde/Optimized_Implementation/: README
ryde/Optimized_Implementation/ryde1f/: Makefile
ryde/Optimized_Implementation/ryde1s/: Makefile
ryde/Optimized_Implementation/ryde3f/: Makefile
ryde/Optimized_Implementation/ryde3s/: Makefile
ryde/Optimized_Implementation/ryde5f/: Makefile
ryde/Optimized_Implementation/ryde5s/: Makefile
ryde/Reference_Implementation/ryde1f/: Makefile
ryde/Reference_Implementation/ryde1s/: Makefile
ryde/Reference_Implementation/ryde3f/: Makefile
ryde/Reference_Implementation/ryde3s/: Makefile
ryde/Reference_Implementation/ryde5f/: Makefile
ryde/Reference_Implementation/ryde5s/: Makefile
(+90 files in other folders)
